# singlestore-bytewax-connector

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pages.yml  release.yml  test.yml
docs/: api.rst  conf.py  index.rst
src/: singlestore_source.py
